# Gw2-WvW-Dashboard

./: .dockerignore  .gitignore  Dockerfile  bun.lockb  fly.toml  package.json  pyproject.toml  svelte.config.js  tsconfig.json
gw2_wvw_dashboard/: Main.py
gw2_wvw_dashboard/api_adapter/: __init__.py
gw2_wvw_dashboard/models/: MatchupOverview.py
gw2_wvw_dashboard/utils/: nth.py
scripts/: start_main.py
src/: app.html
src/regression/: LinearRegression.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/regression/: +page.svelte
src/stores/: CurrentMatchup.ts  PredictModel.ts
src/stores/load_model/: LoadLSTMModel.ts
src/theme/: _smui-theme.scss
src/theme/dark/: _smui-theme.scss
static/: smui-dark.css  smui.css
static/ml_models/: model_0.h5  model_0.keras  model_1.h5  model_1.keras  model_2.h5  model_2.keras  model_3.h5  model_3.keras
static/ml_models/js/: model.json
static/ml_models/js/model_0/: model.json
static/ml_models/js/model_1/: model.json
static/ml_models/js/model_2/: model.json
static/ml_models/js/model_3/: model.json
