[tool.poetry]
name = "Gw2-WvW-Dashboard"
version = "0.1.0"
description = ""
authors = ["FQA <otavioalmeida650@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.18.1"
polars = "^0.16.6"
requests = "^2.28.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
