[tool.poetry]
name = "Gw2-WvW-Dashboard"
version = "0.1.0"
description = ""
authors = ["FQA <otavioalmeida650@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.18.1"
polars = "^0.16.6"
requests = "^2.28.2"
dacite = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "scripts.start_main:start"
